fix: remove top spacing for previous sticky header

--- a/theme/less/specific/search.less
+++ b/theme/less/specific/search.less
@@ -7,7 +7,7 @@
     .search-bar {
         @media @query-md {
             position: sticky;
-            top: 72px; // header height
+            top: 0;
             z-index: 1;
             background: white;
 
